src/tui/snapshots/control_acceso__tui__visual_tests__ConfiguracionInicial_80x24_Brisas.snap
---
source: src/tui/visual_tests.rs
expression: volcado
---
=== texto ===
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                           TERMINAL DEMASIADO PEQUEÑA                           
                          Actual: 80×24 · mínimo: 60×26                         
                        Amplíe para continuar · ESC salir                       
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                

=== estilos ===
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                           " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"TERMINAL DEMASIADO PEQUEÑA" fg=Rgb(220, 170, 70) bg=Black mod=NONE
"                           " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                          Actual: 80×24 · mínimo: 60×26                         " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                        " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"Amplíe para continuar · ESC salir" fg=Rgb(145, 158, 164) bg=Black mod=NONE
"                       " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
"                                                                                " fg=Rgb(220, 225, 228) bg=Black mod=NONE
